<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:background="#E6E6E6"
    >
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center"
        android:src="@drawable/user1"/>
    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        >

        <TextView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:padding="8dp"
            android:text="@string/username"
            android:textSize="18sp"
            android:textColor="#000000"
            android:background="#FFFFFF"/>
        <EditText
            android:id="@+id/username"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:padding="8dp"
            android:hint="请输入账号"
            android:textColorHint="#95A1AA"
            android:background="#FFFFFF"
            android:layout_weight="3" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <TextView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:padding="8dp"
            android:text="@string/password"
            android:textSize="18sp"
            android:textColor="#000000"
            android:background="#FFFFFF"/>
        <EditText
            android:id="@+id/password"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:layout_marginRight="5dp"
            android:padding="8dp"
            android:hint="请输入密码"
            android:textColorHint="#95A1AA"
            android:background="#FFFFFF"
            android:inputType="textPassword" />
    </LinearLayout>

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        android:background="#1296DB"
        android:textColor="#FFFFFF"
        android:onClick="login"
        android:text="@string/Login" />
    <Button
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        android:background="#1296DB"
        android:textColor="#FFFFFF"
        android:onClick="register"
        android:text="@string/register" />
    <Button
        android:id="@+id/back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        android:background="#1296DB"
        android:textColor="#FFFFFF"
        android:text="@string/back"/>

</LinearLayout>